[project]
name = "wildvine-keys"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
  "urllib3>=2.2.3",
  "frida==16.0.8",
  "frida-tools==12.0.4",
  "protobuf==3.19.0",
  "pycryptodome",
  "xmltodict",
  "requests",
  "google",
  "google-api-python-client",
  "pycryptodomex"
]

[project.scripts]
hello = "wildvine_keys:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
]
